Full Width Supermenu with Yamm

--- a/app/views/layouts/_header_super_menu.html.erb
+++ b/app/views/layouts/_header_super_menu.html.erb
@@ -1,58 +1,79 @@
-<div class="navbar yamm navbar-inverse navbar-fixed-top">
-   <div class="container">
-      <div class="navbar-header">
-         <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"> School of Integrative Biology</a>
-      </div>
-     
-    <!-- Menu Item-1 -->
-     <div id="navbar-collapse-1" class="navbar-collapse collapse">
-	<ul class="nav navbar-nav">
-	   <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">About<b class="caret"></b></a>
-	     <ul class="dropdown-menu">
-	       <li>
-	          <div class="yamm-content">
-		    <div class="row">
-			<ul class="col-sm-2 list-unstyled">
-			  <li><p><strong>--Title??-- </strong></p></li>
-			  <li><a href="#"> News & Events </a></li><br>
-			  <li><a href="#"> Contact Us </a></li><br>
-			  <li><a href="#"> IB Blog </a></li><br>
-			</ul>
-
-			<ul class="col-sm-2 list-unstyled">
-			  <li class="column-width"><p><strong>People</strong></p></li>
-			  <li class="column-width" ><a href="#"> Faculty </a></li><br>
-			  <li class="column-width" ><a href="#"> Staff </a></li><br>
-			  <li class="column-width" ><a href="#"> Academics </a></li><br>
-			  <li class="column-width" ><a href="#"> Graduate Students </a></li><br>
-			</ul>
-
-			<ul class="col-sm-2 list-unstyled">
-			  <li><p><strong>Departments</strong></p></li>
-			  <li><a href="#"> Animal Biology </a></li><br>
-			  <li><a href="#"> Entomology </a></li><br>
-			  <li><a href="#"> Plant Biology </a></li><br>
-			</ul>
-
-			<ul class="col-sm-2 list-unstyled">
-			  <li class="column-width"><p><strong>Programs</strong></p></li>
-			  <li class="column-width" ><a href="#"> Program in Ecology,Evolution & Conservation Biology (PEEC) </a></li><br>
-			  <li   class="column-width" ><a href="#"> Neuroscience Program (NSC) </a></li><br>
-			  <li   class="column-width" ><a href="#"> M.S.in Teaching of Biology </a></li><br>
-			  <li   class="column-width" ><a href="#"> Online M.S.in Teaching of Biology </a></li><br>
-			</ul>
-		</div>
-	      </div>
-            </li>
-          </ul>
-        </li>
 
 
-    <!-- Menu Item-2 -->
+
+
+
+    <div class="navbar yamm navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"> School of Integrative Biology</a>
+</div>
+<div id="navbar-collapse-1" class="navbar-collapse collapse">
+<ul class="nav navbar-nav">
+
+<!-- Classic list -->
+<li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">About<b class="caret"></b></a>
+<ul class="dropdown-menu">
+<li>
+<!-- Content container to add padding -->
+<div class="yamm-content">
+<div class="row">
+
+<ul class="col-sm-2 list-unstyled">
+<li>
+<p><strong>--Title??-- </strong></p>
+</li>
+<li><a href="#"> News & Events </a></li><br>
+<li><a href="#"> Contact Us </a></li><br>
+<li><a href="#"> IB Blog </a></li><br>
+</ul>
+
+
+<ul class="col-sm-2 list-unstyled">
+<li   class="column-width" >
+  <p><strong>People</strong></p>
+</li>
+<li   class="column-width" ><a href="#"> Faculty </a></li><br>
+<li   class="column-width" ><a href="#"> Staff </a></li><br>
+<li   class="column-width" ><a href="#"> Academics </a></li><br>
+<li   class="column-width" ><a href="#"> Graduate Students </a></li><br>
+</ul>
+
+
+<ul class="col-sm-2 list-unstyled">
+<li>
+  <p><strong>Departments</strong></p>
+</li>
+<li><a href="#"> Animal Biology </a></li><br>
+<li><a href="#"> Entomology </a></li><br>
+<li><a href="#"> Plant Biology </a></li><br>
+</ul>
+
+
+<ul class="col-sm-2 list-unstyled">
+<li   class="column-width" >
+  <p><strong>Programs</strong></p>
+</li>
+<li class="column-width" ><a href="#"> Program in Ecology,Evolution & Conservation Biology (PEEC) </a></li><br>
+<li   class="column-width" ><a href="#"> Neuroscience Program (NSC) </a></li><br>
+<li   class="column-width" ><a href="#"> M.S.in Teaching of Biology </a></li><br>
+<li   class="column-width" ><a href="#"> Online M.S.in Teaching of Biology </a></li><br>
+</ul>
+
+
+</div>
+	  </div>
+	</li>
+      </ul>
+    </li>
+
+
+    <!-- Classic list -->
     <li class="dropdown yamm-fw "><a href="#" data-toggle="dropdown" class="dropdown-toggle">Undergraduate <b class="caret"></b></a>
       <ul class="dropdown-menu">
 	<li>
-	   <div class="yamm-content">
+	  <!-- Content container to add padding -->
+	  <div class="yamm-content">
 	    <div class="row">
 
 	      <ul class="col-sm-2 list-unstyled">
@@ -116,21 +137,29 @@
     </li>
 
 
-    <!-- Menu Item-3 -->
+    <!-- Classic list -->
     <li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Graduate <b class="caret"></b></a>
       <ul class="dropdown-menu">
 	<li>
-	   <div class="yamm-content">
+	  <!-- Content container to add padding -->
+	  <div class="yamm-content">
 	    <div class="row">
+
+
 	      <ul class="col-sm-2 list-unstyled">
-		<li> <p><strong>--Title??-- </strong></p></li>
+		<li>
+		  <p><strong>--Title??-- </strong></p>
+		</li>
 		<li><a href="#"> Grants & Awards </a></li><br>
 		<li><a href="#"> Support </a></li><br>
 		<li><a href="#"> News & Features </a></li><br>
 	      </ul>
 
+
 	      <ul class="col-sm-2 list-unstyled">
-		<li> <p><strong> Department & Programs </strong></p></li>
+		<li>
+		  <p><strong> Department & Programs </strong></p>
+		</li>
 		<li class="column-width" ><a href="#"> Animal Biology </a></li><br>
 		<li  class="column-width"><a href="#"> Entamology </a></li><br>
 		<li  class="column-width"><a href="#"> Plant Biology </a></li><br>
@@ -139,16 +168,17 @@
 		<li  class="column-width"><a href="#"> M.S.in Teaching of Biology(MST) </a></li><br>
 		<li  class="column-width"><a href="#"> Online M.S.in Teaching of Biology </a></li><br>
 	      </ul>
-           </div>
-         </div>
-        </li>
-       </ul>
-    </li>
 
-   </ul>
-  </div>
- </div>
-</div>
+     </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
 
 
 
