--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,151 @@
+  <!-- Page Content -->
+    <div class="container">
+
+        <!-- Page Heading/Breadcrumbs -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Three Column News Listing
+                    <small>Subheading</small>
+                </h1>
+                <ol class="breadcrumb">
+                    <li><a href="./">Home</a>
+                    </li>
+                    <li class="active">Three Column News Listing</li>
+                </ol>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src=" http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+        </div>
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+            <div class="col-md-4 img-portfolio">
+                <a href="./articles/new">
+                    <img class="img-responsive img-hover" src="http://buysafecandles.com/full/candle-warmer/University-of-Illinois-Scentsy-Warmer.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="./articles/new">News Item</a>
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Pagination -->
+        <div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <li>
+                        <a href="#">&laquo;</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">1</a>
+                    </li>
+                    <li>
+                        <a href="#">2</a>
+                    </li>
+                    <li>
+                        <a href="#">3</a>
+                    </li>
+                    <li>
+                        <a href="#">4</a>
+                    </li>
+                    <li>
+                        <a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /.row -->
+
+
+
+
 <h1>Listing Articles</h1>
 	<%= link_to 'New article', new_article_path %>
 	<table>
@@ -18,3 +166,9 @@
 	    </tr>
 	  <% end %>
 	</table>
+
+
+
+
+
+
