--- a/app/views/sample_layouts/threecolumnpanel.html.erb
+++ b/app/views/sample_layouts/threecolumnpanel.html.erb
@@ -1,18 +1,8 @@
-<% provide(:title, "About") %>
-   <h1>About</h1>
-
-    <h2> This is a 3 column layout </h2>
-    
-<br><br>
-
-
-
-
+<% provide(:title, "3ColumnPanel") %>
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to SIB 
-                </h1>
+                    This is a 3 column Panel layout </h1>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
