--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,30 @@
 <% provide(:title, "Help") %>
    <h1>Help</h1>
-    <p>
-      This is the Help page for the
-      <a href="https://dev.life.illinois.edu">Ashwini's site</a>
-      .
-    </p>
+    <h2> This is a 4 column layout </h2>
+    
+<br><br>
+
+
+ <div class="row">
+  <div class="col-md-3">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+  <div class="col-md-3">
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+    aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+  <div class="col-md-3">
+    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+    doloremque laudantium, totam rem aperiam.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+  <div class="col-md-3">
+    <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+    dicta sunt explicabo.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+</div>
 
