--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,3 +27,32 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+
+
+<br><br>
+
+ <h2> This is an uneven 3 column layout </h2>
+
+<br><br>
+
+
+
+ <div class="row">
+  <div class="col-md-3">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+  <div class="col-md-6">
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+    aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+  <div class="col-md-3">
+    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+    doloremque laudantium, totam rem aperiam.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+</div>
+
