--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= full_title(yield(:title)) %></title>
     	<%= stylesheet_link_tag "application", media: "all",
                                            "data-turbolinks-track" => true %>
@@ -13,15 +14,17 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-
  </head>
   
  <body>
-    <%= render 'layouts/header' %>
- 	   <div class="container">
-      		<%= yield %>
-     		<%= render 'layouts/footer' %>
-    	   </div>
+
+     <%= render 'layouts/header' %>
+ 
+
+     <div class="container">
+       <%= yield %>
+       <%= render 'layouts/footer' %>
+     </div>
   </body>
 </html>
 
