News from RSS Feed and Database

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -175,7 +175,8 @@
     	      <ul class="col-sm-2 list-unstyled">
 		<li> <p><strong> Other Layouts </strong></p></li>
 		<li><%= link_to "Tabbed Pages", tab_path %></li><br>
-		<li><%= link_to "News Listing", newslist_path %></li><br>
+		<li><%= link_to "News Listing from RSS feed", postslist_path %></li><br>
+		<li><%= link_to "News Listing from Database", newslist_path %></li><br>
 		<li><%= link_to "News Item", newsitem_path %></li><br>
 		<li><%= link_to "Page with Left Sidebar", leftsidebar_path %></li><br>
 		<li><%= link_to "Contact Page", samplecontact_path %></li><br>
